# UAVFlight_Telemetry

./: .gitignore
Backend/telemetry_kv_server/: .dockerignore  Dockerfile
Backend/telemetry_kv_server/src/: api.rs  binary_client.rs  main.rs  types.rs  websocket.rs
Backend/telemetry_sim/: Dockerfile
Backend/telemetry_sim/src/: main.rs  telemetry.rs  trajectory.rs
backend/: API_GUIDE.md  Cargo.toml  QUICKSTART.md  README.md  control_panel.html  docker-compose.yml
backend/src/: error.rs  iterator.rs  lib.rs  store.rs  types.rs
backend/src/serialization/: header.rs  key.rs  mod.rs  value.rs
backend/telemetry_sim/: .dockerignore  Cargo.toml  README.md
backend/telemetry_sim/src/: generator.rs  server.rs
telemetry_kv_server/: Cargo.toml  test_axum.rs
telemetry_kv_server/src/: storage.rs
