[package]
name = "telemetry-kv-server"
version = "0.1.0"
edition = "2021"

[dependencies]
kiwi-store = { path = "../" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1.0"
